--- a/Day2/cv-task.html
+++ b/Day2/cv-task.html
@@ -6,15 +6,16 @@
     <title>Document</title>
 </head>
 <body>
-    <h3><u><center>CURRICULUM VITAE</center></u></h3>
-    <h5>HARIVIGNESH.A (B.E electrical)</h5>
+    <h1><u><center>CURRICULUM VITAE</center></u></h1>
+    <h3>HARIVIGNESH.A (B.E electrical)</h3>
     <p>Address: 100/20 Sivan Road,  xyz road,Chennai -600001 </p>
     <p>Permanent Address: 20/ 100 Perumal Street, Govinda Complex ,Salem -630065</p>
-    <P>Phone Number :7001000000 <a href="www.google.co.in">harivignesh@gmail.com</a> </P>
-    ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
-    <ul><li><u>Carrier Objective:</u></li></ul>
+    <p>Phone Number :7001000000 </p>
+    <p>Mail Id:<a href="www.google.co.in">harivignesh@gmail.com</a></p> 
+    <hr> </hr>
+    <h3>Carrier Objective:</h3>
     <p>Career objectives should be tailored to the specific job or industry and should be clear, concise, and impactful. They provide employers with a quick snapshot of the candidate's professional ambitions and suitability for the role.</p>
-    <ul><li><u>Educational Qualifications:</u></li></ul>
+    <h4>Educational Qualifications:</h4>
     <table border="5" cellpadding="5" cellspacing="5">
         <thead>
           <tr>
@@ -47,19 +48,19 @@
         </tbody>
         <tfoot></tfoot>
       </table>
-      <ul><li><u>Academic Projects:</u></li></ul>
-            <pre><ul type="arrow">
+      <h3>Academic Projects:</h3>
+            <ul type="arrow">
                              <li>Auto Booking System</li>
                              <li>Library Management System</li>
                              <li>App Booking For Bus</li>
                              <li>Currency Counting Machine</li>
-              </ul></pre>
+              </ul>
 
-              <ul><li><u>Industrial Visit:</u></li></ul>
-              <pre><ul type="square">
+              <h3>Industrial Visit:</h3>
+              <ul type="square">
                 <li>Visited ISRO in kerala</li>
                 <li>Visited HCL Tech in Chennai</li>
                 
- </ul></pre>
+ </ul>
 </body>
 </html>
